js code refactoring

--- a/src/makers_script/makers_test.html
+++ b/src/makers_script/makers_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0064)https://makerschile.cl/producto/pack-200-leds-3mm-y-5mm-arduino/ -->
 <html lang="es-CL"><head>
-	<script src="makers.js"></script>
+	<script src="makerschile.js"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
