--- a/landing/demos/index.html
+++ b/landing/demos/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +11,6 @@
   <body>
     <div id="app">
     </div>
-    <script type="module" src="/src/main.js"></script>
+    {% render_bundle 'main' 'js' %}
   </body>
 </html>
