feat: new landing, only js left

--- a/landing/demos/index.html
+++ b/landing/demos/index.html
@@ -4,9 +4,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="http://www.cactusco.cl/static/img/Logo_CACTUS.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cactus Demo</title>
+    <title>Cactus</title>
   </head>
   <body>
     <div id="app">
