feat: new illustrations, deleted past images, fixed favicon route, emailing feature added

--- a/landing/demos/index.html
+++ b/landing/demos/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="http://www.cactusco.cl/static/img/Logo_CACTUS.png" />
+    <link rel="icon" href="/static/img/Logo_CACTUS.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cactus</title>
   </head>
